# zip-code

./: CMakeLists.txt  README.md
div_tasks/: Division_Tasks_Huffman
include/: read_file.h
src/: main.c  read_file.c
